# ProjektBadawczy

./: .gitignore  .gitmodules  .mqtt_backend.py.un~  CMakeLists.txt  configure_submodules  httpd-vhosts.conf  httpd.conf  main.c  main_with_sensor.cpp  make_ethernet  make_with_paths  mqtt_backend.py  mqtt_backend.py~  mqtt_de0-nano_server_script.py  mqtt_read_topic  mqtt_read_topic~  test_mqtt_pub
akcelerometr/: akcelerometr.ino
arduino/: mqtt.ino
arduino/mqtt/: mqtt.ino
arduino/mqtt2/: mqtt2.ino
de0-nano-scripts/: mqtt_de0-nano_server_script.py
de0nano/: mqtt_de0-nano _temp.sh  mqtt_de0-nano_variable_dependent.sh
de10_webserver/: mqtt_backend.py  read_mqtt.py
de10_webserver/www/: db.txt  index.html
meta-fpga-iot/meta-common/recipes-core/images/: fpga-iot-image.bb
meta-fpga-iot/meta-de0-nano/recipes-kernel/linux/linux-socfpga-lts/: de0-nano.dts
mqtt/: mqtt.ino
picoping/: CMakeLists.txt  main.cpp  repo_urls.txt  run
picoping/ethernet/: CMakeLists.txt  main.cpp  run
picoping/main/: CMakeLists.txt  main.cpp  make_main  run
picoping/sensor/: CMakeLists.txt  make_sensor  sensor.cpp
raspberry/: IoT_driver.py  light.py
raspberry_variable_dependent/: IoT_driver.py
sensor/: CMakeLists.txt  make_sensor  sensor.cpp
test/: test_mqtt_pub
www/: .index.html.un~  db.txt  index.html
